# Evolve

./: .gitignore  CLAUDE.md  README.md  README_CN.md  agent  com.ying.myagent.plist  com.ying.myagent.s1check.plist  config.yaml  config.yaml.example  package-lock.json  pyproject.toml  requirements.txt  run.py  schema.sql  start.sh
agents/: business-advisor.md  code-reviewer.md  frida-farm.md  researcher.md  system-monitor.md
docs/: ARCHITECTURE.md  OVERVIEW.md  PROGRESS.md  design.md  money-action-plan.md  observer-rating-s1.md  s1-daily-log.md  survival-action-plan-v2.md  upwork-profile-draft.md
myagent/: __main__.py  ai_provider.py  auth.py  chat_manager.py  claude_mem.py  cli.py  config.py  context_builder.py  context_manager.py  cron_scheduler.py  db.py  dh_auth.py  dh_config.py  digital_humans.py  doubao.py  embedding.py  executor.py  extensions.py  feishu.py  knowledge.py  memory.py  models.py  observer.py  profile_builder.py  router.py  scanner.py  scheduler.py  server.py  session_registry.py  supervisor.py  survival.py  web.py  wrapper.py  ws_client.py  ws_hub.py  yaml_writer.py
persona/: about_ying.md  identity.md  knowledge.md  principles.md  private.md
relay/: relay_server.py  requirements.txt
scripts/: install.sh  s1_daily_check.sh  s1_exit_check.sh  uninstall.sh  upwork_register.js
tests/: conftest.py  test_agent_config_dh_scoping.py  test_auth.py  test_chat_manager.py  test_claude_mem.py  test_cli.py  test_config.py  test_config_dh_sovereignty.py  test_context_manager.py  test_crash_recovery.py  test_db.py  test_db_dh.py  test_dh_api_extras.py  (+31 more)
(+94 files in other folders)
