[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myagent"
version = "0.1.0"
description = "MyAgent - Personal AI digital twin"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.1",
    "uvicorn[standard]>=0.41.0",
    "httpx>=0.28.1",
    "aiosqlite>=0.20.0",
    "pydantic>=2.12.0",
    "pyyaml>=6.0",
    "websockets>=15.0",
    "asyncpg>=0.30.0",
    "pyjwt>=2.8.0",
    "watchfiles>=1.0.0",
]

[project.scripts]
myagent = "myagent.cli:main"
